# hcp-vault-secrets-client

./: .env.template  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  Todo.txt  config.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  tox.ini  venvsetup.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflow/: ci_workflow.yml
.github/workflows/: cd.yml  ci.yml  ci_workflow.yml  linter.yml  pages.yml  sonarcloud.yml  sonarcloud_pr.yml  super-linter.yml
docs/source/: conf.py  contributing.rst  index.rst  modules.rst  src.rst  tests.rst
examples/: creating_secrets.py  deleting_secrets.py  retrieving_secrets.py
hcp_vault_secrets_client/: hcp.py  main.py
src/hcp_vault_secrets_client/: hcp.py
tests/: conftest.py
tests/unit/: test_hcp.py
