[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcp-vault-secrets-client"
version = "0.0.1"
authors = [
  { name="Sean Humes", email="107776081+TheSchipper@users.noreply.github.com" },
]
description = "API client for HCP Vault Secrets"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = ["HashiCorp", "vault", "secrets", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=4.0.0",
    "JSON-log-formatter>=1.0",
    "mypy>=0.991",
    "black>=22.1.0",
    "tox>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests/unit"
]
log_file = "pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
